--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -8,19 +8,19 @@
 
 
       <div class="form-group has-feedback">
-          <input type="text" class="form-control font-khmer-cursive" placeholder="Email" [(ngModel)]="userName" (keypress)="enterLoginHandler($event)" (keydown)="tapfocus($event)">
+          <input type="text" class="form-control" [ngClass]="userName? 'active-input' : ''" placeholder="Email" [(ngModel)]="userName" (keypress)="enterLoginHandler($event)" (keydown)="tapfocus($event)">
           <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
 
       <div class="form-group has-feedback">
-          <input class="form-control" placeholder="Password" type="password" [(ngModel)]="password" (keypress)="enterLoginHandler($event)" #passwordElement>
+          <input class="form-control" [ngClass]="password? 'active-input' : ''" placeholder="Password" type="password" [(ngModel)]="password" (keypress)="enterLoginHandler($event)" #passwordElement>
           <span class="glyphicon glyphicon-lock form-control-feedback"></span>
       </div>
 
       <div class="row">
           <div class="form-group col-md-12" style = "padding-right: 0px;">
                   <label class = "pointer_cursor" (click)="remember()">
-                      <span [ngClass]="{'k-i-close-circle red': !rememberMe, 'k-i-check-circle ic': rememberMe}" class="k-icon" style="margin: -3px 0px 0px 0px;"></span>
+                      <span [ngClass]="{'k-i-close-circle red': !rememberMe, 'k-i-check-circle ic': rememberMe}" class="k-icon" style="margin: -3px 0px 0px 0px; font-size: 20px;"></span>
                        <span style="margin: 0px 1px 0px 5px;" class="font-khmer-cursive">Remember Me</span>
                   </label>
 
