--- a/src/app/register/category/category.component.html
+++ b/src/app/register/category/category.component.html
@@ -106,7 +106,7 @@
 
 
           <div class="c_btn">
-            <button class="k-button btn-w100px-h35px font-khmer-cursive btn-add-00" (click)="inquiry()">
+            <button class="k-button btn-w100px-h35px font-khmer-cursive btn-add-00" (click)="add()">
                 <span class="k-icon k-i-plus-circle "></span>
                 <span class="margin-left-5px">{{'Common.Button.New' | translate}}</span>
             </button>
