--- a/src/app/register/category-add/category-add.component.html
+++ b/src/app/register/category-add/category-add.component.html
@@ -3,7 +3,7 @@
       <div class="web_container">
           <!-- header -->
           <div class="pop_header">
-              <h1>Tittle</h1>
+              <h4>{{'Category.Label.AddNewCategory' | translate}}</h4>
               <button type="button" tabindex=-1 class="btn_popclose" (click)="close()"><span>close</span></button>
           </div>
           <!-- //header -->
@@ -12,18 +12,18 @@
               <div class="row">
                   <div class="form-group col-md-6">
                       <label for="inputPassword4">Name</label>
-                      <input type="text" [ngClass]="name? 'active-input' : ''" class="form-control" [(ngModel)]="name" placeholder="Name">
+                      <input type="text" [ngClass]="name? 'active-input' : ''" class="form-control" [(ngModel)]="name" placeholder="{{'Category.Placeholder.EnterCategoryName' | translate}}">
                       <div class="in_box">
-                          <button type="button" [ngClass]="name? 'btn_del' : ''" tabindex=-1 class="btn" tabindex=-1 tabindex=-1></button>
+                          <button (click)="undefinedValue('name')" type="button" [ngClass]="name? 'btn_del' : ''" tabindex=-1 class="btn" tabindex=-1 tabindex=-1></button>
                       </div>
                   </div>
 
 
                   <div class="form-group col-md-6">
                     <label for="inputPassword4">Description</label>
-                    <input type="text" [ngClass]="description? 'active-input' : ''" class="form-control" [(ngModel)]="description" placeholder="Name">
+                    <input type="text" [ngClass]="description? 'active-input' : ''" class="form-control" [(ngModel)]="description" placeholder="{{'Common.Placeholder.EnterDescription' | translate}}">
                     <div class="in_box">
-                        <button type="button" [ngClass]="description? 'btn_del' : ''" tabindex=-1 class="btn" tabindex=-1 tabindex=-1></button>
+                        <button (click)="undefinedValue('description')" type="button" [ngClass]="description? 'btn_del' : ''" tabindex=-1 class="btn" tabindex=-1 tabindex=-1></button>
                     </div>
                 </div>
 
@@ -36,12 +36,12 @@
       <div class="c_btn">
         <button (click)="close()" class="k-button btn-w100px-h35px font-khmer-cursive button-close"  kendoButton [attr.look]="'outline'">
           <span class="k-icon k-i-close-circle k-i-x-circle margin-top-1px font-size-20px"></span>
-          <span class="margin-top-2px">Close</span>
+          <span class="margin-top-2px">{{'Common.Button.Close'|translate}}</span>
         </button>
 
         <button class="k-button btn-w100px-h35px font-khmer-cursive button-save"  kendoButton [attr.look]="'outline'" (click)="save()">
             <span class="k-icon k-i-download margin-top-1px font-size-20px"></span>
-            <span class="margin-top-5px margin-left-5px">Save</span>
+            <span class="margin-top-5px margin-left-5px">{{'Common.Button.Save'|translate}}</span>
         </button>
       </div>
   </div>
